--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "express": "~4.16.1",
+    "express": "~4.17.1",
+    "express-openid-connect": "^2.5.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "mongoose": "^5.13.5",
