--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.17.1",
+    "express-jwt": "^6.1.0",
     "express-openid-connect": "^2.5.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
